--- a/src/client/index.html
+++ b/src/client/index.html
@@ -3,10 +3,13 @@
 
 <head>
   <title>Network Snatcher</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css?family=Hind|PT+Mono" rel="stylesheet">
 </head>
 
 <body>
-  <ul id="root"></ul>
+  <div id="root"></div>
 </body>
 
 </html>
